crates/parser/src/snapshots/parser__tests__parse_boolean_literal_false.snap
---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
info:
  code: "false"
---
Root@0..5
  Boolean@0..5
    Boolean@0..5 "false"
