crates/parser/src/snapshots/parser__tests__parse_boolean_literal_true.snap
---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
info:
  code: "true"
---
Root@0..4
  Boolean@0..4
    Boolean@0..4 "true"
