crates/parser/src/snapshots/parser__tests__parse_comment.snap
---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
---
Root@0..9
  Comment@0..9 "// hello!"
