crates/parser/src/snapshots/parser__tests__parse_destructuring.snap
---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
---
Root@0..17
  LetStatement@0..16
    Let@0..3 "let"
    Whitespace@3..4 " "
    StructPattern@4..13
      LeftBrace@4..5 "{"
      Whitespace@5..6 " "
      Identifier@6..7 "x"
      Comma@7..8 ","
      Whitespace@8..9 " "
      Identifier@9..10 "y"
      Whitespace@10..11 " "
      RightBrace@11..12 "}"
      Whitespace@12..13 " "
    Equals@13..14 "="
    Whitespace@14..15 " "
    VariableReference@15..16
      Identifier@15..16 "x"
  Semicolon@16..17 ";"
