crates/parser/src/snapshots/parser__tests__parse_function_call.snap
---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
---
Root@0..5
  FunctionCallExpression@0..5
    VariableReference@0..3
      Identifier@0..3 "foo"
    ArgumentList@3..5
      LeftParenthesis@3..4 "("
      RightParenthesis@4..5 ")"
